comment & icon & fonts added

--- a/home.html
+++ b/home.html
@@ -6,23 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles/home.css">
+    <!-- Icon from fontawesome -->
     <script src="https://kit.fontawesome.com/c7de4d4586.js" crossorigin="anonymous"></script>
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+    <!-- Container start -->
     <section class="container">
 
-        <!-- Header part -->
+        <!-- Header start -->
         <header class="banner">
             <div class="banner-info banner-content">
-                <h1 class="banner-headiing">The Greatest show on the earth</h1>
+                <h1 class="banner-heading">The Greatest show on the earth</h1>
                 <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                     roots in a piece of
                     classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 <a target="_blank" class="banner-button" href="webpage2.html">Watch Live
-                    <i class="fa-solid fa-greater-than"></i>
+                    <i style="padding-left: 5px;" class="fa-solid fa-arrow-right"></i>
                 </a>
             </div>
 
@@ -30,19 +37,23 @@
                 <img class="banner-image" src="assets/Banner Image.png" alt="">
             </div>
         </header>
+        <!-- Header end -->
 
-        <!-- Main section -->
+        <!-- Main section start-->
         <main class="main">
 
-            <!-- Aside section -->
+            <!-- Aside section start -->
             <aside class="side-bar">
                 <a class="side-button" href="">Upcoming Match</a>
                 <a class="side-button" href="">All Group</a>
                 <a class="side-button uniq-color-button" href="">Blog</a>
             </aside>
+            <!-- Aside section end -->
 
-            <!-- Aricles section -->
+            <!-- Aricle section start-->
             <article class="articles">
+
+                <!-- Aricle one start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -59,6 +70,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle one end-->
+
+                <!-- Aricle two start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -75,6 +89,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle two end-->
+
+                <!-- Aricle three start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -91,6 +108,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle three end-->
+
+                <!-- Aricle four start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -107,6 +127,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle four end-->
+
+                <!-- Aricle five start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -123,6 +146,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle five end-->
+
+                <!-- Aricle six start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -139,6 +165,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle six end-->
+
+                <!-- Aricle seven start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -155,6 +184,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle seven end-->
+
+                <!-- Aricle eight start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -171,6 +203,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- Aricle eight end-->
+
+                <!-- Aricle nine start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
                     <a class="article-button" href="">Transfer</a>
@@ -187,13 +222,18 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- Aricle nine end-->
 
             </article>
-        </main>
-    </section>
+            <!-- Aricle section end-->
 
-    <!-- Footer Section -->
+        </main>
+        <!-- Main section end-->
+
+    </section>
+    <!-- Container end -->
+
+    <!-- Footer Section start-->
     <footer class="home-footer">
         <h2 class="home-footer-heading">Goal</h2>
         <hr>
@@ -206,6 +246,7 @@
             <a class="home-footer-button" href="">Goal Live</a>
         </div>
     </footer>
+    <!-- Footer Section end-->
 </body>
 
 </html>
