--- a/webpage2.html
+++ b/webpage2.html
@@ -6,59 +6,156 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webpage2</title>
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles/home.css">
+    <!-- Icon from fontawesome -->
     <script src="https://kit.fontawesome.com/c7de4d4586.js" crossorigin="anonymous"></script>
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+    <!-- Container start -->
     <section class="container">
 
-        <!-- Header part -->
+        <!-- Header start -->
         <header class="banner">
             <div class="banner-info banner-content">
                 <h1 class="banner-heading">The Greatest show on the earth</h1>
                 <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                     roots in a piece of
                     classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <a class="banner-button" href="">Watch Live</a>
+                <a target="_blank" class="banner-button" href="webpage2.html">Watch Live
+                    <i style="padding-left: 5px;" class="fa-solid fa-arrow-right"></i>
+                </a>
             </div>
 
-            <div class="banner-image banner-content">
-                <img src="assets/Banner Image.png" alt="">
+            <div>
+                <img class="banner-image" src="assets/Banner Image.png" alt="">
             </div>
         </header>
+        <!-- Header end -->
 
-        <!-- Main section -->
+        <!-- Main section start-->
         <main class="main">
 
-            <!-- Aside section -->
+            <!-- Aside section start -->
             <aside class="side-bar">
                 <a class="side-button" href="">Upcoming Match</a>
                 <a class="side-button" href="">All Group</a>
                 <a class="side-button uniq-color-button" href="">Blog</a>
             </aside>
+            <!-- Aside section end -->
 
-            <!-- Aricles section -->
+
+            <!-- Aricle section start-->
             <article class="articles">
-                <div class="article">
+
+                <!-- Aricle one start-->
+                <div class="flags-article">
                     <div class="flags">
                         <img class="article-image" src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img class="article-image" src="assets/Flag.png" alt="">
                     </div>
 
-                    <div class="teams">
-                        <h2>Germany VS France</h2>
-                        <p>April 01, 2023, 1.00 AM</p>
+                    <div>
+                        <h3 class="flag-details">Germany VS France</h3>
+                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
+                <!-- Aricle one end-->
+
+                <!-- Aricle two start-->
+                <div class="flags-article">
+                    <div class="flags">
+                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <h2>vs</h2>
+                        <img class="article-image" src="assets/Flag.png" alt="">
+                    </div>
+
+                    <div>
+                        <h3 class="flag-details">Germany VS France</h3>
+                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                    </div>
+
+                </div>
+                <!-- Aricle two end-->
+
+                <!-- Aricle three start-->
+                <div class="flags-article">
+                    <div class="flags">
+                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <h2>vs</h2>
+                        <img class="article-image" src="assets/Flag.png" alt="">
+                    </div>
+
+                    <div>
+                        <h3 class="flag-details">Germany VS France</h3>
+                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <!-- Aricle three end-->
+
+                <!-- Aricle four start-->
+                <div class="flags-article">
+                    <div class="flags">
+                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <h2>vs</h2>
+                        <img class="article-image" src="assets/Flag.png" alt="">
+                    </div>
+
+                    <div>
+                        <h3 class="flag-details">Germany VS France</h3>
+                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <!-- Aricle four end-->
+
+                <!-- Aricle five start-->
+                <div class="flags-article">
+                    <div class="flags">
+                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <h2>vs</h2>
+                        <img class="article-image" src="assets/Flag.png" alt="">
+                    </div>
+
+                    <div>
+                        <h3 class="flag-details">Germany VS France</h3>
+                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <!-- Aricle five end-->
+
+                <!-- Aricle six start-->
+                <div class="flags-article">
+                    <div class="flags">
+                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <h2>vs</h2>
+                        <img class="article-image" src="assets/Flag.png" alt="">
+                    </div>
+
+                    <div>
+                        <h3 class="flag-details">Germany VS France</h3>
+                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                    </div>
+
+                </div>
+                <!-- Aricle six end-->
 
             </article>
-        </main>
-    </section>
+            <!-- Aricle section end-->
 
-    <!-- Footer Section -->
+        </main>
+        <!-- Main section end-->
+
+    </section>
+    <!-- Container end -->
+
+    <!-- Footer Section start-->
     <footer class="home-footer">
         <h2 class="home-footer-heading">Goal</h2>
         <hr>
@@ -71,6 +168,7 @@
             <a class="home-footer-button" href="">Goal Live</a>
         </div>
     </footer>
+    <!-- Footer Section end-->
 </body>
 
 </html>
