live watching page editted

--- a/webpage2.html
+++ b/webpage2.html
@@ -57,9 +57,9 @@
                 <!-- Aricle one start-->
                 <div class="flags-article">
                     <div class="flags">
-                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
-                        <img class="article-image" src="assets/Flag.png" alt="">
+                        <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
@@ -72,9 +72,9 @@
                 <!-- Aricle two start-->
                 <div class="flags-article">
                     <div class="flags">
-                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
-                        <img class="article-image" src="assets/Flag.png" alt="">
+                        <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
@@ -88,9 +88,9 @@
                 <!-- Aricle three start-->
                 <div class="flags-article">
                     <div class="flags">
-                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
-                        <img class="article-image" src="assets/Flag.png" alt="">
+                        <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
@@ -103,9 +103,9 @@
                 <!-- Aricle four start-->
                 <div class="flags-article">
                     <div class="flags">
-                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
-                        <img class="article-image" src="assets/Flag.png" alt="">
+                        <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
@@ -118,9 +118,9 @@
                 <!-- Aricle five start-->
                 <div class="flags-article">
                     <div class="flags">
-                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
-                        <img class="article-image" src="assets/Flag.png" alt="">
+                        <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
@@ -133,9 +133,9 @@
                 <!-- Aricle six start-->
                 <div class="flags-article">
                     <div class="flags">
-                        <img class="article-image" src="assets/germany Flag.png" alt="">
+                        <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
-                        <img class="article-image" src="assets/Flag.png" alt="">
+                        <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
