mobile view added

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- Icon from fontawesome -->
     <script src="https://kit.fontawesome.com/c7de4d4586.js" crossorigin="anonymous"></script>
     <!-- Google font -->
@@ -23,7 +23,7 @@
 
         <!-- Header start -->
         <header class="banner">
-            <div class="banner-info banner-content">
+            <div class="banner-info">
                 <h1 class="banner-heading">The Greatest show on the earth</h1>
                 <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                     roots in a piece of
