social icons added

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                 <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                     roots in a piece of
                     classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <a target="_blank" class="banner-button" href="webpage2.html">Watch Live
+                <a target="_blank" class="banner-button" href="Live-Watching-page.html">Watch Live
                     <i style="padding-left: 5px;" class="fa-solid fa-arrow-right"></i>
                 </a>
             </div>
@@ -166,64 +166,6 @@
                     </div>
                 </div>
                 <!-- Aricle six end-->
-
-                <!-- Aricle seven start-->
-                <div class="article">
-                    <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
-                    <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
-
-                    <div class="article-info">
-                        <div class="hour">
-                            <i class="fa-regular fa-clock"></i>
-                            10h
-                        </div>
-                        <div class="message">
-                            <i class="fa-regular fa-comment-dots"></i>
-                            23
-                        </div>
-                    </div>
-                </div>
-                <!-- Aricle seven end-->
-
-                <!-- Aricle eight start-->
-                <div class="article">
-                    <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
-                    <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
-
-                    <div class="article-info">
-                        <div class="hour">
-                            <i class="fa-regular fa-clock"></i>
-                            10h
-                        </div>
-                        <div class="message">
-                            <i class="fa-regular fa-comment-dots"></i>
-                            23
-                        </div>
-                    </div>
-                </div>
-                <!-- Aricle eight end-->
-
-                <!-- Aricle nine start-->
-                <div class="article">
-                    <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
-                    <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
-
-                    <div class="article-info">
-                        <div class="hour">
-                            <i class="fa-regular fa-clock"></i>
-                            10h
-                        </div>
-                        <div class="message">
-                            <i class="fa-regular fa-comment-dots"></i>
-                            23
-                        </div>
-                    </div>
-                </div>
-                <!-- Aricle nine end-->
-
             </article>
             <!-- Aricle section end-->
 
@@ -244,6 +186,18 @@
             <a class="home-footer-button" href="">Privacy Settings </a>
             <a class="home-footer-button" href="">Goal App</a>
             <a class="home-footer-button" href="">Goal Live</a>
+        </div>
+
+        <div class="social-icon">
+            <a href="https://www.linkedin.com/in/salma-akter-jony-3555a5197/">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a href="facebook.com">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="twitter.com">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
         </div>
     </footer>
     <!-- Footer Section end-->
