--- a/Live-Watching-page.html
+++ b/Live-Watching-page.html
@@ -167,6 +167,18 @@
             <a class="home-footer-button" href="">Goal App</a>
             <a class="home-footer-button" href="">Goal Live</a>
         </div>
+
+        <div class="social-icon">
+            <a href="https://www.linkedin.com/in/salma-akter-jony-3555a5197/">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a href="https://facebook.com/">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com/">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
     </footer>
     <!-- Footer Section end-->
 </body>
