--- a/home.html
+++ b/home.html
@@ -25,17 +25,21 @@
         <header class="banner">
             <div class="banner-info">
                 <h1 class="banner-heading">The Greatest show on the earth</h1>
-                <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                    roots in a piece of
-                    classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="banner-description">Cristiano Ronaldo will almost certainly be taking part in his last World
+                    Cup. The all-time leading international goalscorer will look to add the World Cup to his horde of
+                    trophies.Bruno Fernandes will also be one to watch.</p>
                 <a target="_blank" class="banner-button" href="Live-Watching-page.html">Watch Live
                     <i style="padding-left: 5px;" class="fa-solid fa-arrow-right"></i>
                 </a>
+
+            </div>
+            <div><img class="bonus-animation" src="assets/football.png" alt="football"></div>
+
+            <img class="banner-image" src="assets/banner-image.png" alt="">
+            <div>
+
             </div>
 
-            <div>
-                <img class="banner-image" src="assets/Banner Image.png" alt="">
-            </div>
         </header>
         <!-- Header end -->
 
@@ -44,9 +48,9 @@
 
             <!-- Aside section start -->
             <aside class="side-bar">
-                <a class="side-button" href="">Upcoming Match</a>
-                <a class="side-button" href="">All Group</a>
-                <a class="side-button uniq-color-button" href="">Blog</a>
+                <a target="_blank" class="side-button" href="Live-Watching-page.html">Upcoming Match</a>
+                <a target="_blank" class="side-button" href="">All Group</a>
+                <a target="_blank" class="side-button uniq-color-button" href="">Blog</a>
             </aside>
             <!-- Aside section end -->
 
@@ -56,7 +60,7 @@
                 <!-- Aricle one start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
+                    <a target="_blank" class="article-button" href="">Transfer</a>
                     <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
 
                     <div class="article-info">
@@ -75,17 +79,17 @@
                 <!-- Aricle two start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
+                    <a target="_blank" class="article-button" href="">Transfer</a>
                     <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
 
                     <div class="article-info">
                         <div class="hour">
                             <i class="fa-regular fa-clock"></i>
-                            10h
+                            8h
                         </div>
                         <div class="message">
                             <i class="fa-regular fa-comment-dots"></i>
-                            23
+                            12
                         </div>
                     </div>
                 </div>
@@ -94,17 +98,17 @@
                 <!-- Aricle three start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
+                    <a target="_blank" class="article-button" href="">Transfer</a>
                     <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
 
                     <div class="article-info">
                         <div class="hour">
                             <i class="fa-regular fa-clock"></i>
-                            10h
+                            1h
                         </div>
                         <div class="message">
                             <i class="fa-regular fa-comment-dots"></i>
-                            23
+                            2
                         </div>
                     </div>
                 </div>
@@ -119,11 +123,11 @@
                     <div class="article-info">
                         <div class="hour">
                             <i class="fa-regular fa-clock"></i>
-                            10h
+                            13h
                         </div>
                         <div class="message">
                             <i class="fa-regular fa-comment-dots"></i>
-                            23
+                            65
                         </div>
                     </div>
                 </div>
@@ -132,17 +136,17 @@
                 <!-- Aricle five start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
+                    <a target="_blank" class="article-button" href="">Transfer</a>
                     <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
 
                     <div class="article-info">
                         <div class="hour">
                             <i class="fa-regular fa-clock"></i>
-                            10h
+                            9h
                         </div>
                         <div class="message">
                             <i class="fa-regular fa-comment-dots"></i>
-                            23
+                            21
                         </div>
                     </div>
                 </div>
@@ -151,17 +155,17 @@
                 <!-- Aricle six start-->
                 <div class="article">
                     <img class="article-image" src="assets/Blog Image.png" alt="">
-                    <a class="article-button" href="">Transfer</a>
+                    <a target="_blank" class="article-button" href="">Transfer</a>
                     <h4 class="article-details">Transfer Live:Chlesea in talks over Kimpenbe transfer</h4>
 
                     <div class="article-info">
                         <div class="hour">
                             <i class="fa-regular fa-clock"></i>
-                            10h
+                            12h
                         </div>
                         <div class="message">
                             <i class="fa-regular fa-comment-dots"></i>
-                            23
+                            33
                         </div>
                     </div>
                 </div>
@@ -175,24 +179,27 @@
     </section>
     <!-- Container end -->
 
+    <!-- Bonous button -->
+    <a target="_blank" class="bonus-button" href="">Veiw All</a>
+
     <!-- Footer Section start-->
-    <footer class="home-footer">
-        <h2 class="home-footer-heading">Goal</h2>
+    <footer class="footer">
+        <h2 class="footer-heading">Goal</h2>
         <hr>
-        <div class="home-footer-buttons">
-            <a class="home-footer-button" href="">Contact Us </a>
-            <a class="home-footer-button" href="">Terms of Service </a>
-            <a class="home-footer-button" href="">Privacy Policy</a>
-            <a class="home-footer-button" href="">Privacy Settings </a>
-            <a class="home-footer-button" href="">Goal App</a>
-            <a class="home-footer-button" href="">Goal Live</a>
+        <div class="footer-buttons">
+            <a class="footer-button" href="#">Contact Us </a>
+            <a class="footer-button" href="#">Terms of Service </a>
+            <a class="footer-button" href="#">Privacy Policy</a>
+            <a class="footer-button" href="#">Privacy Settings </a>
+            <a class="footer-button" href="#">Goal App</a>
+            <a class="footer-button" href="#">Goal Live</a>
         </div>
 
         <div class="social-icon">
             <a href="https://www.linkedin.com/in/salma-akter-jony-3555a5197/">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a href="facebook.com">
+            <a href="https://www.facebook.com/profile.php?id=100015308972261">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
             <a href="twitter.com">
