--- a/Live-Watching-page.html
+++ b/Live-Watching-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webpage2</title>
+    <title>Live Match</title>
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
     <!-- Icon from fontawesome -->
@@ -23,19 +23,22 @@
 
         <!-- Header start -->
         <header class="banner">
-            <div class="banner-info banner-content">
+            <div class="banner-info">
                 <h1 class="banner-heading">The Greatest show on the earth</h1>
-                <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                    roots in a piece of
-                    classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <a target="_blank" class="banner-button" href="webpage2.html">Watch Live
+                <p class="banner-description">Cristiano Ronaldo will almost certainly be taking part in his last World
+                    Cup. The all-time leading international goalscorer will look to add the World Cup to his horde of
+                    trophies.Bruno Fernandes will also be one to watch.</p>
+                <a target="_blank" class="banner-button" href="Live-Watching-page.html">Watch Live
                     <i style="padding-left: 5px;" class="fa-solid fa-arrow-right"></i>
                 </a>
             </div>
-
             <div>
-                <img class="banner-image" src="assets/Banner Image.png" alt="">
+                <img class="bonus-animation" src="assets/football.png" alt="football">
             </div>
+            <img class="banner-image" src="assets/banner-image.png" alt="">
+            <div>
+            </div>
+
         </header>
         <!-- Header end -->
 
@@ -44,9 +47,10 @@
 
             <!-- Aside section start -->
             <aside class="side-bar">
-                <a class="side-button" href="">Upcoming Match</a>
-                <a class="side-button" href="">All Group</a>
-                <a class="side-button uniq-color-button" href="">Blog</a>
+                <a target="_blank" class="side-button uniq-color-button" href="Live-Watching-page.html">Upcoming
+                    Match</a>
+                <a target="_blank" class="side-button" href="Live-Watching-page.html">All Group</a>
+                <a target="_blank" class="side-button" href="home.html">Blog</a>
             </aside>
             <!-- Aside section end -->
 
@@ -55,94 +59,92 @@
             <article class="articles">
 
                 <!-- Aricle one start-->
-                <div class="flags-article">
-                    <div class="flags">
+                <div class="Match-blog">
+                    <div class="Live-Matches">
                         <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
-                        <h3 class="flag-details">Germany VS France</h3>
-                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                        <h3 class="Match-details">Germany VS France</h3>
+                        <p class="Match-details Match-info">April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
                 <!-- Aricle one end-->
 
                 <!-- Aricle two start-->
-                <div class="flags-article">
-                    <div class="flags">
+                <div class="Match-blog">
+                    <div class="Live-Matches">
                         <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
-                        <h3 class="flag-details">Germany VS France</h3>
-                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                        <h3 class="Match-details">Itally VS France</h3>
+                        <p class="Match-details Match-info">April 01, 2023, 1.00 AM</p>
                     </div>
-
                 </div>
                 <!-- Aricle two end-->
 
                 <!-- Aricle three start-->
-                <div class="flags-article">
-                    <div class="flags">
+                <div class="Match-blog">
+                    <div class="Live-Matches">
                         <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
-                        <h3 class="flag-details">Germany VS France</h3>
-                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                        <h3 class="Match-details">Germany VS Itally</h3>
+                        <p class="Match-details Match-info">April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
                 <!-- Aricle three end-->
 
                 <!-- Aricle four start-->
-                <div class="flags-article">
-                    <div class="flags">
+                <div class="Match-blog">
+                    <div class="Live-Matches">
                         <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
-                        <h3 class="flag-details">Germany VS France</h3>
-                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                        <h3 class="Match-details">Germany VS Bangladesh</h3>
+                        <p class="Match-details Match-info">April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
                 <!-- Aricle four end-->
 
                 <!-- Aricle five start-->
-                <div class="flags-article">
-                    <div class="flags">
+                <div class="Match-blog">
+                    <div class="Live-Matches">
                         <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
-                        <h3 class="flag-details">Germany VS France</h3>
-                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                        <h3 class="Match-details">Spain VS France</h3>
+                        <p class="Match-details Match-info">April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
                 <!-- Aricle five end-->
 
                 <!-- Aricle six start-->
-                <div class="flags-article">
-                    <div class="flags">
+                <div class="Match-blog">
+                    <div class="Live-Matches">
                         <img src="assets/germany Flag.png" alt="">
                         <h2>vs</h2>
                         <img src="assets/Flag.png" alt="">
                     </div>
 
                     <div>
-                        <h3 class="flag-details">Germany VS France</h3>
-                        <p class="flag-details flag-info">April 01, 2023, 1.00 AM</p>
+                        <h3 class="Match-details">India VS France</h3>
+                        <p class="Match-details Match-info">April 01, 2023, 1.00 AM</p>
                     </div>
-
                 </div>
                 <!-- Aricle six end-->
 
@@ -155,27 +157,29 @@
     </section>
     <!-- Container end -->
 
+    <!-- Bonous button -->
+    <a target="_blank" class="bonus-button" href="Live-Watching-page.html">Veiw All</a>
     <!-- Footer Section start-->
-    <footer class="home-footer">
-        <h2 class="home-footer-heading">Goal</h2>
+    <footer class="footer">
+        <h2 class="footer-heading">Goal</h2>
         <hr>
-        <div class="home-footer-buttons">
-            <a class="home-footer-button" href="">Contact Us </a>
-            <a class="home-footer-button" href="">Terms of Service </a>
-            <a class="home-footer-button" href="">Privacy Policy</a>
-            <a class="home-footer-button" href="">Privacy Settings </a>
-            <a class="home-footer-button" href="">Goal App</a>
-            <a class="home-footer-button" href="">Goal Live</a>
+        <div class="footer-buttons">
+            <a target="_blank" class="footer-button" href="#">Contact Us </a>
+            <a target="_blank" class="footer-button" href="#">Terms of Service </a>
+            <a target="_blank" class="footer-button" href="#">Privacy Policy</a>
+            <a target="_blank" class="footer-button" href="#">Privacy Settings </a>
+            <a target="_blank" class="footer-button" href="#">Goal App</a>
+            <a target="_blank" class="footer-button" href="#">Goal Live</a>
         </div>
 
         <div class="social-icon">
-            <a href="https://www.linkedin.com/in/salma-akter-jony-3555a5197/">
+            <a target="_blank" href="https://www.linkedin.com/in/salma-akter-jony-3555a5197/">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a href="https://facebook.com/">
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=100015308972261">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="https://twitter.com/">
+            <a target="_blank" href="https://twitter.com/">
                 <i class="fa-brands fa-twitter"></i>
             </a>
         </div>
