--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>FIFA world cup live show.com</title>
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
     <!-- Icon from fontawesome -->
@@ -24,7 +24,7 @@
         <!-- Header start -->
         <header class="banner">
             <div class="banner-info">
-                <h1 class="banner-heading">The Greatest show on the earth</h1>
+                <h1 class="banner-heading">The Greatest Football show on the earth</h1>
                 <p class="banner-description">Cristiano Ronaldo will almost certainly be taking part in his last World
                     Cup. The all-time leading international goalscorer will look to add the World Cup to his horde of
                     trophies.Bruno Fernandes will also be one to watch.</p>
